Revised but still working on small issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ height: 5%;
 
 .picture {
   width: 55%;
-  height: 25px;
+  height: 50px;
   padding: 15px;
   margin: 10pt;
 }
